hphp/hack/test/typecheck/expression_trees/mismatched_types.php.exp
File "mismatched_types.php", line 8, characters 5-10:
`ExampleString` does not support this operator (it has no `__plus` method) (Typing[4053])
